css/style.css
.preloader {
  position: fixed;
  height: 100vh;
  width: 100%;
  background-color: #fff;
  z-index: 999 !important;
}
.spinner {
  margin: 45vh auto 0;
  width: 70px;
  text-align: center;
}
.spinner > div {
  width: 18px;
  height: 18px;
  background-color: #1e88e5;
  border-radius: 100%;
  display: inline-block;
  -webkit-animation: sk-bouncedelay 1.4s infinite ease-in-out both;
  animation: sk-bouncedelay 1.4s infinite ease-in-out both;
}
.spinner .bounce1 {
  -webkit-animation-delay: -0.32s;
  animation-delay: -0.32s;
}
.spinner .bounce2 {
  -webkit-animation-delay: -0.16s;
  animation-delay: -0.16s;
}
@-webkit-keyframes sk-bouncedelay {
  0%, 80%, 100% { -webkit-transform: scale(0) }
  40% { -webkit-transform: scale(1.0) }
}
@keyframes sk-bouncedelay {
  0%, 80%, 100% {
    -webkit-transform: scale(0);
    transform: scale(0);
    } 40% {
      -webkit-transform: scale(1.0);
      transform: scale(1.0);
    }
}
body {
    display: flex;
    min-height: 100vh;
    flex-direction: column;
}
main {
    flex: 1 0 auto;
}
.main-header,
#about-me,
#my-work,
#contact-me,
#error-bg {
  height: 45rem;
  width: 100%;
  background-image: url(../img/hero-bg-blur.jpg);
  background-size: 100% 45rem;
  background-repeat: no-repeat;
  background-position: center;
}
.main-header,
#my-work {
  background-attachment: fixed;
}
#about-me {
  background-image: url(../img/about-me.jpg);
}
#my-work {
  height: 50rem;
  background-image: url(../img/my-work.jpg);
  background-size: 100% 50rem;
}
#contact-me {
  background-image: url(../img/contact-me.jpg);
}
#error-bg {
  height: 100vh;
  background-size: 100vw 100vh;
  background-image: url(../img/error-bg.jpg);
}
.brand-logo {
  padding: 0 20px 0 20px !important;
  z-index: 99 !important;
}
.offscreen-menu {
  position: fixed;
  margin-top: -16px;
  right: 6.6% !important;
  height: 520px;
  width: 350px !important;
  z-index: 99;
}
.menu-options li {
  padding: 6px 0;
}
.menu-options li a {
  font-size: 22px;
  color: #263238;
}
.menu-options li a:hover {
  color: #455a64;
}
.fa:hover {
  transform: scale(1.5);
  text-shadow: 3px 3px 16px #607d8b;
}
.footer-menu {
  padding: 3px 0;
}
.container {
  width: 90%;
}
.fix {
  position: fixed !important;
}
.title {
  font-size: 7rem;
  text-shadow: 4px 4px 8px #37474f;
}
.work-title {
  text-shadow: 4px 4px 8px #37474f;
}
.overflow {
  overflow: hidden;
}
.btn-menu {
  right: 25px !important;
}
.btn-hire,
.btn-know,
.btn-view {
  border-width: 3px;
  border-style: solid;
  border-color: #546e7a;
}
.btn-know,
.btn-view {
  border-color: #607d8b;
  color: #cfd8dc;
}
.btn-view {
  border-color: #37474f;
}
.first-letter-large {
  font-size: 3.5rem;
}
/********
  NAVBAR
********/
.nav-wrapper {
  display: block !important;
  background-color: transparent;
  box-shadow: none !important;
}
.nav-wrapper ul li a {
  color: #607d8b;
  font-family: 'Inconsolata', monospace;
  font-size: 1.4rem;
  transition: all 500ms linear;
}
.nav-wrapper ul {
  margin-right: 50px;
}
.nav-wrapper ul li:hover,
.nav-wrapper ul li a:hover {
  background-color: transparent !important;
}
.about-par {
  font-size: 18px !important;
  line-height: 25px;
}
#nothing-to-show {
  margin-top: 10%;
  border: 3px solid #37474f;
  height: 35vh;
  width: 45vw;
}
form {
  padding: 10px;
}
.page-footer {
  background-color: #37474f !important;
}

input[type="text"]:focus,
input[type="text"]:active,
input[type="text"]:focus+label,
input[type="text"]:active+label,
input[type="email"]:focus,
input[type="email"]:active,
input[type="email"]:focus+label,
input[type="email"]:active+label,
textarea:focus,
textarea:active,
textarea:focus+label,
textarea:active+label,
.input-field .prefix.active {
  border-color: #37474f !important;
  color: #37474f !important;
  box-shadow: none !important;
}

@media only screen and (max-width : 600px) {
  .brand-logo {
    left: 4.8rem !important;
  }
  .about-par {
    font-size: 16px !important;
  }
  .main-header,
  #about-me {
      height: 700px;
      background-size: 100% 700px;
  }
  #my-work {
    height: 1200px;
    background-image: url(../img/my-work-1400.jpg);
    background-size: 100% 1200px;
  }
  #nothing-to-show {
    margin-top: 6%;
    margin-left: 1% !important;
    height: 42vh;
    width: 98vw;
  }
}

@media only screen and (max-width : 992px) {
  .brand-logo {
    left: 4.8rem !important;
  }
}

